--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Created by https://www.toptal.com/developers/gitignore/api/vuejs
+# Edit at https://www.toptal.com/developers/gitignore?templates=vuejs
+
+### Vuejs ###
+# Recommended template: Node.gitignore
+
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
+
+# End of https://www.toptal.com/developers/gitignore/api/vuejs
+
+firebase/
